--- a/src/Product.css
+++ b/src/Product.css
@@ -7,18 +7,23 @@
   padding: 20px;
   width: 100%;
   max-height: 400px;
-  max-width: 100px;
-  background-color: white;
+  min-width: 100px;
+  background-color: rgb(237, 245, 248);
   z-index: 1;
 }
 
 .product_info {
   height: 100px;
   margin-bottom: 15px;
+
 }
 
 .product_price {
   margin-top: 5px;
+}
+
+.product_rating{
+  display: flex;
 }
 
 .product > img {
@@ -26,12 +31,13 @@
   width: 100%;
   object-fit: contain;
   margin-bottom: 15px;
-}
+} 
 
 .product > button {
-  background: #00eeff;
+  background: #b5f2f7;
   border: 1px solid;
   margin-top: 10px;
   border-color: #100347 #5c0a4a #053317;
   color: #111;
+  padding: 8px;
 }
