--- a/src/Login.css
+++ b/src/Login.css
@@ -1,18 +1,21 @@
 .login {
-    background-color: white;
+  background-color: rgb(237, 245, 248);
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.login__logo {
+.login_logo {
     margin-top: 20px;
     margin-bottom: 20px;
     object-fit: contain;
-    width: 100px;
+    width: 140px;
     margin-right: auto;
     margin-left: auto;
+    filter: brightness(80%);
+    border-radius: 5px;
+    border: 1px solid rgb(235, 240, 248);
   }
 
 .login_container {
@@ -47,22 +50,22 @@
 }
 
 .login_signInButton {
-    background: #f0c14b;
+  background: #b5f2f7;
     border-radius: 2px;
     width: 100%;
     height: 30px;
     border: 1px solid;
     margin-top: 10px;
-    border-color: #a88734 #9c7e31 #846a29;
+    border-color: #100347 #5c0a4a #053317;
   }
 
   .login_registerButton {
     border-radius: 2px;
     width: 100%;
     height: 30px;
-    border: 1px solid;
+    border: 1px solid #06021a;
     margin-top: 10px;
-    border-color: darkgray;
+    border-color: rgb(186, 211, 194);
   }
   
   
