--- a/src/CheckoutProduct.css
+++ b/src/CheckoutProduct.css
@@ -15,6 +15,11 @@
     border-color: #100347 #5c0a4a #053317;
     color: #111;
 }
+.checkoutProduct_info > button:hover {
+    background-color: #72051b; /* Green */
+    color: rgb(232, 253, 255);
+  }
+  
 
 .checkoutProduct_image {
     object-fit: contain;
