--- a/src/Login.css
+++ b/src/Login.css
@@ -7,15 +7,15 @@
 }
 
 .login_logo {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 35%;
+    margin-bottom: 30%;
     object-fit: contain;
-    width: 140px;
+    width: 150px;
     margin-right: auto;
     margin-left: auto;
-    filter: brightness(80%);
+    filter: brightness(120%);
     border-radius: 5px;
-    border: 1px solid rgb(235, 240, 248);
+    /* border: 1px solid rgb(235, 240, 248); */
   }
 
 .login_container {
